<resources>
    <string name="app_name">MOB 2.2</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="loading">Loading…</string>
    <string name="no_notes_added">No notes added</string>

    <string name="enter_description">Enter description</string>
    <string name="enter_title">Enter title</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete_message">Delete Note?</string>
    <string name="are_you_sure">Are you sure?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
</resources>