<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llAdd"
    android:gravity="center"
    tools:context=".ui.add.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/l">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:textColor="@color/black"
            android:padding="@dimen/xxs"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/gray"
            android:hint="@string/enter_title" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/xxs"
            android:minLines="8"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:background="@drawable/bg_edit_text"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/gray"
            android:hint="@string/enter_description"
            android:lineSpacingMultiplier="1.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/xxs">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRed"
                android:layout_height="@dimen/xxxl"
                android:layout_width="@dimen/xxxl"
                android:layout_margin="@dimen/l"
                android:backgroundTint="@color/option_red"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBlue"
                android:layout_height="@dimen/xxxl"
                android:layout_width="@dimen/xxxl"
                android:layout_margin="@dimen/l"
                android:backgroundTint="@color/option_blue"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnGreen"
                android:layout_height="@dimen/xxxl"
                android:layout_width="@dimen/xxxl"
                android:layout_margin="@dimen/l"
                android:backgroundTint="@color/option_green"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnYellow"
                android:layout_height="@dimen/xxxl"
                android:layout_width="@dimen/xxxl"
                android:layout_margin="@dimen/l"
                android:backgroundTint="@color/option_yellow"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:gravity="center">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:text="@string/add"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_marginStart="@dimen/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:text="@string/cancel"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>